# RigInv

./: README.md  dir_structure.txt  install.py
clustering/: cluster.json  css_colors.py  data.json  do_cluster.py  gen_json.py  local_maximal_clustering_result_to_json.py  possible_inversions.html  rand_rects.py  readme.md  rect_viewer.html  rects_to_json.py  show_clustering.html
clustering/data_1/: cluster.json  data.json  disjoint.json
clustering/data_2/: cluster.json  data.json  disjoint.json  readme.md
clustering/data_3/: cluster.json  data.json  disjoint.json  readme.md
src/cpp/: CMakeLists.txt  brute_force_rect_prediction.cpp  cluster_by_maximal_coverage.cpp  concordant_aln_analysis.cpp  discordant_type1.cpp  discordant_type2.cpp  discordant_type3.cpp  merge_files.cpp  partition_disconnected_rects.cpp  prob_rect_prediction.cpp  readme.md  refine_type2.cpp  sampling_lines.cpp  segment_prediction.cpp  sort_brief_alignment.cpp  test_new_prob.cpp
src/cpp/alglib/cpp/src/: CMakeLists.txt
src/cpp/cmake/: Findloonlib.cmake
src/cpp/deprecated/: discordant_type2.cpp.4b3ac0  partition_disconnected_rects.cpp
src/cpp/gomory-hu/aux/: CMakeLists.txt  generate_gomory_hu_input.cpp  prob_rect_prediction_gomory_hu.cpp  readme.md
src/cpp/gomory-hu/fam/: README  makefile  pathgen.c  treegen.c  unbalanced.c
src/cpp/gomory-hu/gh/: README  compact.c  contract.c  contract.h  fprintfll.h  ho.c  makefile
src/cpp/gomory-hu/ghg/: CMakeLists.txt  README  compact.c  compact.h  contract.c  contract.h  graph.c  graph.h  ho.c  makefile  memassert.h  random.c  readme.md  tree.c  tree.h
src/cpp/gomory-hu/ghs/: README  compact.h  fprintfll.c  graph.c  graph.h  heap.h  ho.c  ho.h  timer.c  tree.c  tree.h
src/cpp/gomory-hu/gus/: README  contract.c  contract.h  graph.c  graph.h  ho.c  makefile  qs.h  random.h  timer.h  tree.c  tree.h
src/cpp/loonutil/: BinReader.cpp  BinWriter.cpp  CMakeLists.txt  array.h  exception.cpp  exception.h  global.cpp  global.h  iobin.h  logger.cpp  logger.h  multi-array.h  progress.cpp  progress.h  readme.md  relabel.h  relabelImpl.h  simpleHelp.cpp  simpleHelp.h  string.cpp  string.h  timer.cpp  timer.h  util.cpp  util.h
src/julia/: .gitignore
src/makefiles/: sort_brief_alignment.make
src/python/: requirements.txt
src/python/lib/: ManyFiles.py  util.py
src/python/src/: bamExtractor.py  k_means.py  readme.md  riginv.py
